Added sound effect when shooting

--- a/1942/1942.csproj
+++ b/1942/1942.csproj
@@ -13,6 +13,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Update="Assets\Effects\bullet_shot.wav">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Update="Assets\Maps\test_level.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
