--- a/Mobius/Engine.csproj
+++ b/Mobius/Engine.csproj
@@ -1,13 +1,13 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
-  </PropertyGroup>
+	<PropertyGroup>
+		<TargetFramework>net6.0</TargetFramework>
+		<ImplicitUsings>enable</ImplicitUsings>
+		<Nullable>enable</Nullable>
+	</PropertyGroup>
 
-  <ItemGroup>
-    <PackageReference Include="Sayers.SDL2.Core" Version="1.0.11" />
-  </ItemGroup>
-
+	<ItemGroup>
+		<PackageReference Include="org.matheval" Version="1.0.0.3" />
+		<PackageReference Include="Sayers.SDL2.Core" Version="1.0.11" />
+	</ItemGroup>
 </Project>
