Engine refactor. Added new BatchRenderer to handle rendering order. Added new CollisionContainer to handle collisions inside it. Created new Particle and ParticleManager to handle particle like entities. Refactored explosion class. Refactored all sprite render functions. Refactored ships and bullets collisions.

--- a/1942/1942.csproj
+++ b/1942/1942.csproj
@@ -19,13 +19,13 @@
     <None Update="Assets\Effects\explosion.wav">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-    <None Update="Assets\Maps\test_level.png">
+    <None Update="Assets\Fonts\inter.ttf">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
     <None Update="Assets\Textures\bullet.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-    <None Update="Assets\Textures\explosion.png">
+    <None Update="Assets\Particles\explosion.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
     <None Update="Assets\Textures\fighter.png">
@@ -34,9 +34,28 @@
     <None Update="Assets\Textures\enemy1.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="Assets\Maps\map.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="Assets\Textures\HealthBar\health_green.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="Assets\Textures\HealthBar\health_left_border.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="Assets\Textures\HealthBar\health_red.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="Assets\Textures\HealthBar\health_right_border.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Update="Assets\Textures\player.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Assets\Fonts\" />
   </ItemGroup>
 
 </Project>
