--- a/1942/1942.csproj
+++ b/1942/1942.csproj
@@ -67,4 +67,8 @@
     <Folder Include="Assets\Fonts\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Include="..\.editorconfig" Link=".editorconfig" />
+  </ItemGroup>
+
 </Project>
